<resources>
    <string name="app_name">TaskMaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="teams">
        <item>Team A</item>
        <item>Team B</item>
        <item>Team C</item>
    </string-array>
    <string name="title_activity_sign_in">SignIn</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="channel_name">TaskMaster</string>
    <string name="channel_description">newTaskmaster</string>
</resources>